feat(back): adds group routes
