# backend/src/modules/groups/types/dtos/requests/get-all-req.dto.ts
@@ -1,0 +1,12 @@
+import { ApiProperty } from "@nestjs/swagger"
+import { IsNotEmpty, IsString } from "class-validator"
+import { PaginationReqDto } from "src/common/types/dtos/pagination-req.dto"
+
+export class GetAllGroupsReqDto extends PaginationReqDto {}
+
+export class GetAllGroupsParamsReqDto {
+    @ApiProperty()
+    @IsString()
+    @IsNotEmpty()
+    projectId: string
+}
