# backend/src/modules/groups/types/dtos/requests/update-group-req.dto.ts
@@ -1,0 +1,21 @@
+import { ApiProperty } from "@nestjs/swagger"
+import { IsArray, IsNotEmpty, IsString } from "class-validator"
+
+export class UpdateGroupReqDto {
+    @ApiProperty()
+    @IsString()
+    @IsNotEmpty()
+    name: string
+
+    @ApiProperty()
+    @IsArray()
+    @IsNotEmpty()
+    userIds: string[]
+}
+
+export class UpdateGroupParamsReqDto {
+    @ApiProperty()
+    @IsString()
+    @IsNotEmpty()
+    id: string
+}
